<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dartscape</string>
    <string name="name">NAME</string>
    <string name="wins">WINS</string>
    <string name="team">TEAM</string>
    <string name="player">PLAYER</string>
    <string name="players">PLAYERS</string>
    <string name="add_players">ADD PLAYERS</string>
    <string name="player_1">PLAYER 1</string>
    <string name="player_2">PLAYER 2</string>
    <string name="player_3">PLAYER 3</string>
    <string name="player_4">PLAYER 4</string>
    <string name="_0">0</string>
    <string name="_20">20</string>
    <string name="_19">19</string>
    <string name="_18">18</string>
    <string name="_17">17</string>
    <string name="_16">16</string>
    <string name="_15">15</string>
    <string name="bull">BULL</string>
    <string name="undo">UNDO</string>
    <string name="dart_games">DART GAMES</string>
    <string name="slot">SLOT</string>
    <string name="quit">QUIT</string>
    <string name="new_game">NEW GAME</string>
    <string name="new_set">NEW SET</string>
    <string name="end_turn">END\nTURN</string>
    <string name="pause_bot">PAUSE\nBOT</string>
    <string name="resume_bot">RESUME\nBOT</string>
    <string name="show_result">SHOW\nRESULT</string>
    <string name="start">START</string>
    <string name="and">AND</string>
    <string name="won">WON</string>
    <string name="_throw">THROW</string>
    <string name="round">ROUND</string>
    <string name="game">GAME</string>
    <string name="leg">LEG</string>
    <string name="legs">LEGS</string>
    <string name="set">SET</string>
    <string name="sets">SETS</string>
    <string name="match">MATCH</string>
    <string name="race">RACE</string>
    <string name="won_the">WON THE</string>
    <string name="play">PLAY</string>
    <string name="again">AGAIN</string>
    <string name="next">NEXT</string>
    <string name="bust">BUST</string>
    <string name="kill">KILL</string>
    <string name="cap">CAP</string>
    <string name="miss">MISS</string>
    <string name="fatality">FATALITY</string>
    <string name="games_played">GAMES PLAYED</string>
    <string name="total_wins">TOTAL WINS</string>
    <string name="total_losses">TOTAL LOSSES</string>
    <string name="win_average">WIN AVERAGE %</string>
    <string name="total_throws">TOTAL THROWS</string>
    <string name="total_outs">TOTAL OUTS</string>
    <string name="hit">HIT</string>
    <string name="hits">HITS</string>
    <string name="hit_avg">HIT AVG.</string>
    <string name="mark_avg">MARK AVG.</string>
    <string name="score">SCORE</string>
    <string name="score_avg">SCORE AVG.</string>
    <string name="best_marks">BEST MARKS</string>
    <string name="best_score">BEST SCORE</string>
    <string name="score_180s">SCORE 180s</string>
    <string name="score_140_179">SCORE 140–179</string>
    <string name="score_100_139">SCORE 100–139</string>
    <string name="score_60_99">SCORE 60–99</string>
    <string name="bullseyes">BULLSEYES</string>
    <string name="double_bullseyes">DOUBLE BULLS</string>
    <string name="single_bullseyes">SINGLE BULLS</string>
    <string name="hit_triples">HIT TRIPLES</string>
    <string name="hit_doubles">HIT DOUBLES</string>
    <string name="hit_singles">HIT SINGLES</string>
    <string name="best_num">BEST \#</string>
    <string name="worst_num">WORST \#</string>
    <string name="best_out">BEST OUT</string>
    <string name="cricket_high">CRICKET HIGH</string>
    <string name="shanghai_high">SHANGHAI HIGH</string>
    <string name="baseball_high">BASEBALL HIGH</string>
    <string name="shanghais">SHANGHAIS</string>
    <string name="kills">KILLS</string>
    <string name="best_inning">BEST INNING</string>
    <string name="bases_per_inning">BASES/INNING</string>
    <string name="runs_per_inning">RUNS/INNING</string>
    <string name="home_runs">HOME RUNS</string>
    <string name="grand_slams">GRAND SLAMS</string>
    <string name="best_game">BEST GAME</string>
    <string name="total_score">TOTAL SCORE</string>
    <string name="all_games">ALL GAMES</string>
    <string name="all_modes">ALL MODES</string>
    <string name="all_variants">ALL VARIANTS</string>
    <string name="_01_games">01 GAMES</string>
    <string name="_301">301</string>
    <string name="_501">501</string>
    <string name="_701">701</string>
    <string name="_901">901</string>
    <string name="_1001">1001</string>
    <string name="_1201">1201</string>
    <string name="_1501">1501</string>
    <string name="straight_in">STRAIGHT IN</string>
    <string name="straight_out">STRAIGHT OUT</string>
    <string name="double_in">DOUBLE IN</string>
    <string name="double_out">DOUBLE OUT</string>
    <string name="triple_in">TRIPLE IN</string>
    <string name="triple_out">TRIPLE OUT</string>
    <string name="master_in">MASTER IN</string>
    <string name="master_out">MASTER OUT</string>
    <string name="cricket">CRICKET</string>
    <string name="normal">NORMAL</string>
    <string name="cut_throat">CUT-THROAT</string>
    <string name="turns">TURNS</string>
    <string name="open">OPEN</string>
    <string name="shanghai">SHANGHAI</string>
    <string name="killer">KILLER</string>
    <string name="one_killer">ONE KILLER</string>
    <string name="killers">KILLERS</string>
    <string name="baseball">BASEBALL</string>
    <string name="inning">INNING</string>
    <string name="out">OUT</string>
    <string name="outs">OUTS</string>
    <string name="base">BASE</string>
    <string name="on_base">ON BASE</string>
    <string name="single">SINGLE</string>
    <string name="_double">DOUBLE</string>
    <string name="triple">TRIPLE</string>
    <string name="home_run">HOME RUN</string>
    <string name="homer">HOMER</string>
    <string name="runner">RUNNER</string>
    <string name="run">RUN</string>
    <string name="runs">RUNS</string>
    <string name="hr">HR</string>
    <string name="grand">GRAND</string>
    <string name="slam">SLAM</string>
    <string name="all_time">ALL TIME</string>
    <string name="last_hour">LAST HOUR</string>
    <string name="last_day">LAST DAY</string>
    <string name="last_week">LAST WEEK</string>
    <string name="last_month">LAST MONTH</string>
    <string name="last_year">LAST YEAR</string>
    <string name="how_to_score">HOW TO SCORE</string>
    <string name="help_to_enter_a_score">TO ENTER A SCORE JUST\nTAP THE BUTTONS OR GAME.</string>
    <string name="scroll_down_for_more">↓↓↓ SCROLL DOWN FOR MORE ↓↓↓</string>
    <string name="tips">TIPS</string>
    <string name="dartscape_game_menu">DARTSCAPE GAME MENU</string>
    <string name="legs_and_sets">LEGS AND SETS</string>
    <string name="help_how_to_score">TAP ONCE FOR A <font fgcolor='#FF44FF44'>SINGLE</font>\nDOUBLE TAP FOR A <font fgcolor='#FF66AAFF'>DOUBLE</font>\nPRESS AND HOLD FOR A <font fgcolor='#FFFFBB00'>TRIPLE</font>\nTRY IT BELOW!</string>
    <string name="help_tip_chapters">TAP THE BUTTON NEAR THE TOP OF THE SCREEN TO JUMP TO DIFFERENT SECTIONS OF THIS HELP SCREEN.</string>
    <string name="help_tip_add_players">ADD NEW PLAYERS AND CHANGE PLAYERS NAMES BY CLICKING THE \"PLAYERS\" BUTTON IN THE BOTTOM LEFT OF THE GAME MENU SCREEN.</string>
    <string name="help_tip_back_arrow">PRESS THE BACK ARROW ← AT THE TOP LEFT OF THE SCREEN TO RETURN TO THE PREVIOUS SCREEN OR BACK TO THE GAME.</string>
    <string name="help_tip_auto_save">AN ONGOING GAME OR MATCH WILL BE AUTOMATICALLY SAVED WHEN THE APP IS CLOSED SO YOU CAN RETURN TO IT LATER.</string>
    <string name="help_tip_stats_individual">TO SEE A PLAYER\'S INDIVIDUAL STATS IN THE STAT SCREEN, CLICK ON THE PLAYER\'S NAME. COMPARE STATS WITH THE BUTTON ABOVE THE PLAYERS LIST.</string>
    <string name="help_game_menu_items">DART GAMES\nGAME VARIANT\n1ST GAME OPTION\n2ND GAME OPTION\nLEGS (SEE BELOW)\nSETS\\LEG-RACE\nPLAYER TYPE\nPLAYER\'S NAME\nBOT\\COMPUTER\nBOT DIFFICULTY\nTEAM OPTION\nTEAMMATE\'S NAME\nCLOSE PLAYER SLOT\nRETURN TO GAME\nSTART GAME\\MATCH\nVIEW\\EDIT PLAYERS\nVIEW PLAYER STATS\nDARTSCAPE SETTINGS\nTHIS SCREEN</string>
    <string name="help_legs_and_sets">IN THE GAME OF DARTS, A \"<font fgcolor='#FF44FF44'>LEG</font>\" IS A SINGLE GAME IN A \"<font fgcolor='#FFFFBB00'>MATCH</font>\". IN A \"<font fgcolor='#FF66AAFF'>LEG RACE</font>\" THERE IS A SET NUMBER OF LEGS A PLAYER MUST WIN IN ORDER TO TO WIN THE <font fgcolor='#FFFFBB00'>MATCH</font>. FOR EXAMPLE, IN A LEG RACE TO 5 LEGS, THE FIRST PLAYER TO WIN 5 LEGS (5 GAMES) WINS THE <font fgcolor='#FFFFBB00'>MATCH</font>.\nA \"<font fgcolor='#FF44FF44'>SET</font>\" IS A NUMBER OF LEGS. TO WIN A <font fgcolor='#FF44FF44'>SET</font> A PLAYER MUST WIN THE <font fgcolor='#FF66AAFF'>BEST OF</font> THE SET NUMBER OF LEGS. FOR EXAMPLE, IF THE NUMBER OF LEGS IN A SET IS 5, THE FIRST PLAYER TO WIN 3 LEGS WINS THE SET. THIS IS THE SAME FOR MULTIPLE SETS. IF THERE ARE 3 SETS IN A <font fgcolor='#FFFFBB00'>MATCH</font>, THE FIRST PLAYER TO WIN 2 SETS WINS THE <font fgcolor='#FFFFBB00'>MATCH</font>.</string>
    <string name="help_game_the_object">THE OBJECT</string>
    <string name="help_game_scoring">SCORING</string>
    <string name="help_game_variants">VARIANTS</string>
    <string name="help_x01_object">THE GAME PLAY STARTS WITH A SCORE OF 301, 501, 701, 901, ETC… THE OBJECT IS TO GET YOUR SCORE TO EXACTLY ZERO BY THROWING ROUNDS OF THREE DARTS AND SUBTRACTING THE SUM OF THOSE THROWS FROM YOUR CURRENT SCORE.</string>
    <string name="help_x01_scoring">TO START SCORING THE PLAYER MUST MEET THE GAME \"<font fgcolor='#FF66AAFF'>IN</font>\" VARIANT REQUIREMENT (SEE BELOW). ALL NUMBERS ARE IN PLAY INCLUDING BULLSEYE. THE PLAYER CAN HIT A <font fgcolor='#FF44FF44'>SINGLE</font>, <font fgcolor='#FF66AAFF'>DOUBLE</font> OR <font fgcolor='#FFFFBB00'>TRIPLE</font> OF ANY NUMBER. THE NUMBER IS THEN MULTIPLIED AND SUBTRACTED FROM THEIR SCORE. TO WIN, THE PLAYER\'S SCORE MUST REACH EXACTLY ZERO AND MEET THE GAME \"<font fgcolor='#FF66AAFF'>OUT</font>\" VARIANT REQUIREMENT (SEE BELOW). IF THE PLAYER\'S SCORE GOES BELOW ZERO, THE PLAYER\'S TURN ENDS AND THEIR SCORE RETURNS TO WHAT IT WAS AT THE BEGINNING OF THEIR TURN. THIS IS CALLED A <font fgcolor='#FFFF6969'>BUST</font>. A GOOD STRATEGY IS TO AIM FOR THE HIGHEST SCORING NUMBER (<font fgcolor='#FFFFBB00'>TRIPLE 20</font>) UNTIL THE PLAYER IS IN SCORING RANGE TO WIN.</string>
    <string name="help_x01_variants"><font fgcolor='#FF66AAFF'>STARTING SCORES</font>\n301, 501, 701, 901,\n1001, 1201, 1301, 1501\n\n<font fgcolor='#FF66AAFF'>STRAIGHT IN\\OUT</font>\n<font fgcolor='#FF44FF44'>ANY NUMBER</font> CAN BE HIT.\n\n<font fgcolor='#FF66AAFF'>DOUBLE IN\\OUT</font>\nONLY <font fgcolor='#FF66AAFF'>DOUBLES</font> CAN BE HIT\n\n<font fgcolor='#FF66AAFF'>TRIPLE IN\\OUT</font>\nONLY <font fgcolor='#FFFFBB00'>TRIPLES</font> CAN BE HIT.\n\n<font fgcolor='#FF66AAFF' >MASTER IN\\OUT</font>\n<font fgcolor='#FF66AAFF'>DOUBLES</font>, <font fgcolor='#FFFFBB00'>TRIPLES</font> OR <font fgcolor='#FFFF6969'>BULLSEYES</font>\nCAN BE HIT.</string>
    <string name="help_cricket_object">THE OBJECT OF CRICKET IS TO HAVE THE HIGHEST SCORE AND \"<font fgcolor='#FFFF6969'>CLOSE OUT</font>\” NUMBERS 15 THROUGH 20 AND THE <font fgcolor='#FFFF6969'>BULLSEYE</font>.</string>
    <string name="sound">SOUND</string>
    <string name="volume">VOLUME</string>
    <string name="winner_sound">WINNER SOUND</string>
    <string name="bust_sound">BUST SOUND</string>
    <string name="purchase_dartscape_pro">PURCHASE DARTSCAPE PRO</string>
    <string name="dartscape_pro">DARTSCAPE PRO</string>
    <string name="return_to_game">RETURN\nTO GAME</string>
    <string name="start_game">START\nGAME</string>
    <string name="stats">STATS</string>
    <string name="settings">SETTINGS</string>
    <string name="help">HELP</string>
    <string name="game_mode">GAME MODE</string>
    <string name="game_options">GAME OPTIONS</string>
    <string name="legs_sets">LEGS/SETS</string>
    <string name="bot">BOT</string>
</resources>