<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.gworks.dartscape.ui.MultiView
                android:id="@+id/multiView3"
                style="@style/MultiViewHeader"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".35"
                android:gravity="right"
                android:text="@string/purchase_dartscape_pro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.gworks.dartscape.ui.MultiView
                android:id="@+id/btnSettingsDartscapePro3"
                style="@style/MultiViewDefault"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dartscape_pro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/multiView3"
                custom:toggleButton="false" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.gworks.dartscape.ui.MultiView
                android:id="@+id/multiView4"
                style="@style/MultiViewHeader"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".35"
                android:text="@string/sound"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.gworks.dartscape.ui.MultiView
                android:id="@+id/mvSettingsVolumeIcon"
                style="@style/MultiViewLabel"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:foreground="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/multiView4"
                custom:icon1="@drawable/ic_volume_high" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mvSettingsVolumeIcon"
                app:layout_constraintTop_toBottomOf="@+id/multiView4">

                <com.gworks.dartscape.ui.MultiView
                    android:id="@+id/mvSettingsVolume"
                    style="@style/MultiViewLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="3"
                    android:text="@string/volume" />

                <SeekBar
                    android:id="@+id/seekSettingsVolume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:max="100"
                    android:progress="100"
                    android:progressDrawable="@drawable/drw_seek_bar"
                    android:thumb="@drawable/drw_seek_thumb" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.gworks.dartscape.ui.MultiView
                android:id="@+id/btnSettingsPlayWinnerSound"
                style="@style/MultiViewDefault"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/winner_sound"
                app:toggleButton="true"
                custom:text2="WIN: OFF" />

            <com.gworks.dartscape.ui.MultiView
                android:id="@+id/btnSettingsPlayBustSound"
                style="@style/MultiViewDefault"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/bust_sound"
                app:toggleButton="true"
                custom:text2="BUST: OFF" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>